--- a/env-redis-configmap.yaml
+++ b/env-redis-configmap.yaml
@@ -11,6 +11,7 @@ data:
   TIMEZONE: Asia/Kolkata
 kind: ConfigMap
 metadata:
+  namespace: prod-alert
   creationTimestamp: null
   labels:
     io.kompose.service: alert-env-redis
