--- a/alert-deployment.yaml
+++ b/alert-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: prod-alert
+  namespace: alerts
   annotations:
     kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
     kompose.version: 1.21.0 (992df58d8)
@@ -71,7 +71,7 @@ spec:
             configMapKeyRef:
               key: TIMEZONE
               name: env-redis
-        image: alerts-redis
+        image: repo.suvegafleet.com/alerts-redis:1.0.0
         imagePullPolicy: ""
         name: alert
         resources: {}
